--- a/singleton.ipynb
+++ b/singleton.ipynb
@@ -46,10 +46,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
+     "ename": "Exception",
+     "evalue": "Esta clase es un singleton, no se pueden crear más de una instancia.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mException\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     19\u001b[39m singleton1 = Singleton.getInstance()\n\u001b[32m     20\u001b[39m singleton2 = Singleton.getInstance()\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m a = \u001b[43mSingleton\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     23\u001b[39m b = Singleton()\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m# Comprobamos si ambas instancias son la misma\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m, in \u001b[36mSingleton.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     12\u001b[39m     \u001b[38;5;66;03m# El constructor es privado para asegurarnos de que sólo se puede crear una instancia\u001b[39;00m\n\u001b[32m     13\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m Singleton.__instance != \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mEsta clase es un singleton, no se pueden crear más de una instancia.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     16\u001b[39m         Singleton.__instance = \u001b[38;5;28mself\u001b[39m\n",
+      "\u001b[31mException\u001b[39m: Esta clase es un singleton, no se pueden crear más de una instancia."
      ]
     }
    ],
